--- a/jupyterhub/values.schema.yaml
+++ b/jupyterhub/values.schema.yaml
@@ -27,6 +27,11 @@ required:
   - rbac
   - global
 properties:
+  enabled:
+    type: boolean
+    description: |
+      enabled allows you to enable or disable jupyterhub using the preffered method
+      if it is included as a dependency in a parent helm chart
   fullnameOverride:
     type: [string, "null"]
     description: |
