--- a/jupyterhub/values.schema.yaml
+++ b/jupyterhub/values.schema.yaml
@@ -30,7 +30,7 @@ properties:
   enabled:
     type: [boolean, "null"]
     description: |
-      enabled allows you to enable or disable jupyterhub using the preffered method
+      enabled allows you to enable or disable jupyterhub using the preferred method
       if it is included as a dependency in a parent helm chart
   fullnameOverride:
     type: [string, "null"]
