--- a/jupyterhub/values.schema.yaml
+++ b/jupyterhub/values.schema.yaml
@@ -30,8 +30,9 @@ properties:
   enabled:
     type: [boolean, "null"]
     description: |
-      enabled allows you to enable or disable jupyterhub using the preferred method
-      if it is included as a dependency in a parent helm chart
+      `enabled` is ignored by the jupyterhub chart itself, but a chart depending
+      on the jupyterhub chart conditionally can make use this config option as
+      the condition.
   fullnameOverride:
     type: [string, "null"]
     description: |
