--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -3,7 +3,9 @@
 fullnameOverride: ""
 nameOverride:
 
-# enable or disable jupyterhub if it is included as a dependency in a parent helm chart
+# enabled is ignored by the jupyterhub chart itself, but a chart depending on
+# the jupyterhub chart conditionally can make use this config option as the
+# condition.
 enabled:
 
 # custom can contain anything you want to pass to the hub pod, as all passed
