--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -70,6 +70,14 @@ repos:
     hooks:
       - id: flake8
 
+  - repo: https://github.com/gruntwork-io/pre-commit
+    rev: v0.1.22
+    hooks:
+      # This requires shellcheck to be installed manually so is disabled by default
+      - id: shellcheck
+        stages:
+          - manual
+
 # pre-commit.ci config reference: https://pre-commit.ci/#configuration
 ci:
   autoupdate_schedule: monthly
