feat: enable HTTPRoute for Gateway API
From https://gateway-api.sigs.k8s.io/

> When using the Gateway API to manage ingress traffic, the Gateway resource defines a point of access at which traffic can be routed across multiple contexts -- for example, from outside the cluster to inside the cluster (north/south traffic).

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -650,6 +650,13 @@ ingress:
   pathType: Prefix
   tls: []
 
+httpRoute:
+  enabled: false
+  gateway:
+    name:
+    namespace:
+  hostnames: []
+
 # cull relates to the jupyterhub-idle-culler service, responsible for evicting
 # inactive singleuser pods.
 #
