--- a/chartpress.yaml
+++ b/chartpress.yaml
@@ -12,7 +12,7 @@ charts:
   - name: jupyterhub
     # Dev: imagePrefix can be useful to override if you want to trial something
     #      locally developed in a remote k8s cluster.
-    imagePrefix: jupyterhub/k8s-
+    imagePrefix: quay.io/jupyterhub/k8s-
     # baseVersion should be a -0.dev suffixed version, where the version should
     # be the next major, minor, or patch version depending on what we have
     # merged so far into the main branch. If for example we have merged a
