Account for CircleCI having GNU `xargs`

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
             # Print out logs from all pods if the tests fail
             pytest --verbose --color=yes ./tests -m 'not netpol' || \
                kubectl get pod -o name | \
-               xargs -I {} -L1 /bin/bash -c \
+               xargs -I {} /bin/bash -c \
                 "echo Logs for {} && kubectl logs --all-containers {} && echo --------------"
           name: Run tests
 
