Print more debug info from pods when CircleCI test fails

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,11 +71,15 @@ jobs:
             export KUBECONFIG="$HOME/.kube/config"
             export HUB_URL=http://localhost:30080
             . ./ci/common
-            # Print out logs from all pods if the tests fail
+            # Print out logs & definition info from all pods if the tests fail
             pytest --verbose --color=yes ./tests -m 'not netpol' || \
                kubectl get pod -o name | \
                xargs -I {} /bin/bash -c \
-                "echo Logs for {} && kubectl logs --all-containers {} && echo --------------"
+                "echo Logs for {} && \
+                 kubectl get {} -o yaml && \
+                 kubectl describe {} && \
+                 kubectl logs --all-containers {} && \
+                 echo --------------------------------"
           name: Run tests
 
       - run:
