Use full form of -y in sample dockerfile
This should also just trigger a rebuild of the image in CI

--- a/images/singleuser-sample/Dockerfile
+++ b/images/singleuser-sample/Dockerfile
@@ -45,8 +45,8 @@ RUN adduser \
         ${NB_USER}
 
 RUN apt-get update \
- && apt-get upgrade -y \
- && apt-get install -y --no-install-recommends \
+ && apt-get upgrade --yes \
+ && apt-get install --yes --no-install-recommends \
         ca-certificates \
         dnsutils \
         iputils-ping \
