--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -29,7 +29,8 @@ jupyterhub-kubespawner
 ## Other optional dependencies for additional features
 pymysql  # mysql
 psycopg2  # postgres
-pycurl  # internal http requests handle more load with pycurl
+# pycurl 7.45.3 is avoided because https://github.com/pycurl/pycurl/issues/834
+pycurl!=7.45.3  # internal http requests handle more load with pycurl
 sqlalchemy-cockroachdb # cocroachdb
 statsd  # statsd metrics collection (TODO: remove soon, since folks use prometheus)
 
