--- a/images/hub/Dockerfile
+++ b/images/hub/Dockerfile
@@ -21,9 +21,11 @@ FROM python:3.11-bullseye as build-stage
 COPY requirements.txt requirements.txt
 ARG PIP_CACHE_DIR=/tmp/pip-cache
 RUN --mount=type=cache,target=${PIP_CACHE_DIR} \
-    pip install build \
- && pip wheel \
+    pip wheel \
         --wheel-dir=/tmp/wheels \
+        # pycurl 7.45.3 has wheels, but they aren't portable
+        # https://github.com/pycurl/pycurl/issues/834
+        --no-binary pycurl \
         -r requirements.txt \
         # Additional wheels for default-stage. Updates below should be repeated
         # in default-stage.
@@ -63,11 +65,13 @@ RUN apt-get update \
  && rm -rf /var/lib/apt/lists/*
 
 # install wheels built in the build stage
+# --no-index ensures _only_ wheels from the build stage are installed
 COPY requirements.txt /tmp/requirements.txt
 ARG PIP_CACHE_DIR=/tmp/pip-cache
 RUN --mount=type=cache,target=${PIP_CACHE_DIR} \
     --mount=type=cache,from=build-stage,source=/tmp/wheels,target=/tmp/wheels \
     pip install \
+        --no-index \
         --find-links=/tmp/wheels/ \
         -r /tmp/requirements.txt
 
@@ -93,6 +97,7 @@ ARG PIP_CACHE_DIR=/tmp/pip-cache
 RUN --mount=type=cache,target=${PIP_CACHE_DIR} \
     --mount=type=cache,from=build-stage,source=/tmp/wheels,target=/tmp/wheels \
     pip install \
+        --no-index \
         --find-links=/tmp/wheels/ \
         # Updates below should be repeated in build-stage.
         #
