Add recommended chart labels alongside old labels
This enables us to make a breaking change in z2jh 5 where user servers
restarted once or more during z2jh 4 doesn't have to be restarted as
part of the breaking change then. If we did it right away, network
policy enforcement would fail for old servers for example.

Before z2jh 4, we should also get kubespawner to specify
`app.kubernetes.io/component` alongisde `component`.

Also, its nice to be able to provide time for people to adjust to the
new labels with a period of overlapping labels. For example, grafana
dashboards working with prometheus metrics could keep working in this
period and at any time transition to refering to new labels, and then
when we get z2jh 5 released such dashboards could have already adjusted.

--- a/jupyterhub/templates/proxy/autohttps/deployment.yaml
+++ b/jupyterhub/templates/proxy/autohttps/deployment.yaml
@@ -130,10 +130,10 @@ spec:
           {{- end }}
           args:
             - watch-save
-            - --label=app={{ include "jupyterhub.appLabel" . }}
-            - --label=release={{ .Release.Name }}
-            - --label=chart={{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-            - --label=heritage=secret-sync
+            - --label=app.kubernetes.io/name={{ include "jupyterhub.appLabel" . }}
+            - --label=app.kubernetes.io/instance={{ .Release.Name }}
+            - --label=helm.sh/chart={{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+            - --label=app.kubernetes.io/managed-by=secret-sync
             - {{ include "jupyterhub.proxy-public-tls.fullname" . }}
             - acme.json
             - /etc/acme/acme.json
