--- a/images/hub/Dockerfile
+++ b/images/hub/Dockerfile
@@ -10,7 +10,7 @@
 # NOTE: If the image version is updated, also update it in ci/refreeze and
 #       singleuser-sample's Dockerfile!
 #
-FROM python:3.11-bullseye as build-stage
+FROM python:3.11-bookworm as build-stage
 
 # Build wheels
 #
@@ -38,7 +38,7 @@ RUN --mount=type=cache,target=${PIP_CACHE_DIR} \
 # This stage is built and published as quay.io/jupyterhub/k8s-hub-slim. It is meant to
 # provide no non-essential packages.
 #
-FROM python:3.11-slim-bullseye as slim-stage
+FROM python:3.11-slim-bookworm as slim-stage
 ENV DEBIAN_FRONTEND=noninteractive
 
 ARG NB_USER=jovyan \
