--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -14,6 +14,7 @@ jupyterhub-firstuseauthenticator>=1
 jupyterhub-hmacauthenticator
 jupyterhub-ldapauthenticator
 jupyterhub-ltiauthenticator!=1.3.0
+jupyterhub-multiauthenticator
 jupyterhub-nativeauthenticator
 jupyterhub-tmpauthenticator
 nullauthenticator
